{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 400,
  "lineage": "4abd0c92-f1ce-1b7a-c14a-29440ea1a1d2",
  "resources": [
    {
      "module": "module.vpc1[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:internet-gateway/igw-0d7e65972597062ec",
            "id": "igw-0d7e65972597062ec",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_igp"
            },
            "tags_all": {
              "Name": "my_igp"
            },
            "vpc_id": "vpc-033b50713674482e4"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "igp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d7e65972597062ec",
            "id": "r-rtb-003282d08455e23491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-003282d08455e2349",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.my_igp",
            "module.vpc1.aws_route_table.pub_route_table",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:route-table/rtb-003282d08455e2349",
            "id": "rtb-003282d08455e2349",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7e65972597062ec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_pub_route_table"
            },
            "tags_all": {
              "Name": "my_pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-033b50713674482e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:route-table/rtb-0b116173a7f25c317",
            "id": "rtb-0b116173a7f25c317",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_pvt_route_table"
            },
            "tags_all": {
              "Name": "my_pvt_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-033b50713674482e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pub_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da3827cab7687fff",
            "route_table_id": "rtb-003282d08455e2349",
            "subnet_id": "subnet-01ec5cce9f206edbd"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.pub_route_table",
            "module.vpc1.aws_subnet.pub_sub",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002b4897159cb2404",
            "route_table_id": "rtb-0b116173a7f25c317",
            "subnet_id": "subnet-0747e76083b92bcfc"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.pvt_route_table",
            "module.vpc1.aws_subnet.pvt_sub",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:subnet/subnet-01ec5cce9f206edbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ec5cce9f206edbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub"
            },
            "tags_all": {
              "Name": "public_sub"
            },
            "vpc_id": "vpc-033b50713674482e4"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:subnet/subnet-0747e76083b92bcfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0747e76083b92bcfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub"
            },
            "tags_all": {
              "Name": "private_sub"
            },
            "vpc_id": "vpc-033b50713674482e4"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:vpc/vpc-033b50713674482e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0261ad960cacd0f06",
            "default_route_table_id": "rtb-0aed747987d2fc6c6",
            "default_security_group_id": "sg-04c4a91f5d5b15d79",
            "dhcp_options_id": "dopt-0766aa9532903afab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-033b50713674482e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aed747987d2fc6c6",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc1[1]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:internet-gateway/igw-0b7623fe748764c4c",
            "id": "igw-0b7623fe748764c4c",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_igp"
            },
            "tags_all": {
              "Name": "my_igp"
            },
            "vpc_id": "vpc-0b4c565763d9b4dab"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "igp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b7623fe748764c4c",
            "id": "r-rtb-0afcd6254b29d600a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0afcd6254b29d600a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.my_igp",
            "module.vpc1.aws_route_table.pub_route_table",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:route-table/rtb-0afcd6254b29d600a",
            "id": "rtb-0afcd6254b29d600a",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7623fe748764c4c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_pub_route_table"
            },
            "tags_all": {
              "Name": "my_pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c565763d9b4dab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:route-table/rtb-0ca4185b1680866d6",
            "id": "rtb-0ca4185b1680866d6",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_pvt_route_table"
            },
            "tags_all": {
              "Name": "my_pvt_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c565763d9b4dab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pub_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07253d172336eb8cf",
            "route_table_id": "rtb-0afcd6254b29d600a",
            "subnet_id": "subnet-0145013c671d6cb8a"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.pub_route_table",
            "module.vpc1.aws_subnet.pub_sub",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fb10a89031b4afd",
            "route_table_id": "rtb-0ca4185b1680866d6",
            "subnet_id": "subnet-0a2885ca5c6560cd4"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.pvt_route_table",
            "module.vpc1.aws_subnet.pvt_sub",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:subnet/subnet-0145013c671d6cb8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0145013c671d6cb8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub"
            },
            "tags_all": {
              "Name": "public_sub"
            },
            "vpc_id": "vpc-0b4c565763d9b4dab"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:subnet/subnet-0a2885ca5c6560cd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2885ca5c6560cd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub"
            },
            "tags_all": {
              "Name": "private_sub"
            },
            "vpc_id": "vpc-0b4c565763d9b4dab"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[1]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:vpc/vpc-0b4c565763d9b4dab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0d3e2719cb851443f",
            "default_route_table_id": "rtb-00d67123e3b0af7a0",
            "default_security_group_id": "sg-0dd106b1bf15cf2d2",
            "dhcp_options_id": "dopt-0766aa9532903afab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b4c565763d9b4dab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d67123e3b0af7a0",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc1[2]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:internet-gateway/igw-05aed52e6b252a258",
            "id": "igw-05aed52e6b252a258",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_igp"
            },
            "tags_all": {
              "Name": "my_igp"
            },
            "vpc_id": "vpc-058d1aee06d10fc53"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[2]",
      "mode": "managed",
      "type": "aws_route",
      "name": "igp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05aed52e6b252a258",
            "id": "r-rtb-0cd8c8fd12221f4d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cd8c8fd12221f4d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.my_igp",
            "module.vpc1.aws_route_table.pub_route_table",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[2]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:route-table/rtb-0cd8c8fd12221f4d7",
            "id": "rtb-0cd8c8fd12221f4d7",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05aed52e6b252a258",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_pub_route_table"
            },
            "tags_all": {
              "Name": "my_pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-058d1aee06d10fc53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[2]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:route-table/rtb-0c268b6c6e4f7232f",
            "id": "rtb-0c268b6c6e4f7232f",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_pvt_route_table"
            },
            "tags_all": {
              "Name": "my_pvt_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-058d1aee06d10fc53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[2]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pub_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c15252fc36ccad9a",
            "route_table_id": "rtb-0cd8c8fd12221f4d7",
            "subnet_id": "subnet-0f5a695c80c31a30d"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.pub_route_table",
            "module.vpc1.aws_subnet.pub_sub",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[2]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bd3f3b0ade57942",
            "route_table_id": "rtb-0c268b6c6e4f7232f",
            "subnet_id": "subnet-055fd9fc7432c98f5"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.pvt_route_table",
            "module.vpc1.aws_subnet.pvt_sub",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:subnet/subnet-0f5a695c80c31a30d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5a695c80c31a30d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub"
            },
            "tags_all": {
              "Name": "public_sub"
            },
            "vpc_id": "vpc-058d1aee06d10fc53"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:subnet/subnet-055fd9fc7432c98f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055fd9fc7432c98f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub"
            },
            "tags_all": {
              "Name": "private_sub"
            },
            "vpc_id": "vpc-058d1aee06d10fc53"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[2]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:vpc/vpc-058d1aee06d10fc53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-081509f162f2fa869",
            "default_route_table_id": "rtb-0e85c666756eb19d5",
            "default_security_group_id": "sg-0c75839fc32611372",
            "dhcp_options_id": "dopt-0766aa9532903afab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-058d1aee06d10fc53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e85c666756eb19d5",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc1[3]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:internet-gateway/igw-0c5f18a23fc75eb1f",
            "id": "igw-0c5f18a23fc75eb1f",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_igp"
            },
            "tags_all": {
              "Name": "my_igp"
            },
            "vpc_id": "vpc-0e7076f245d336195"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[3]",
      "mode": "managed",
      "type": "aws_route",
      "name": "igp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c5f18a23fc75eb1f",
            "id": "r-rtb-01f222110413d91151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f222110413d9115",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.my_igp",
            "module.vpc1.aws_route_table.pub_route_table",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[3]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:route-table/rtb-01f222110413d9115",
            "id": "rtb-01f222110413d9115",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5f18a23fc75eb1f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_pub_route_table"
            },
            "tags_all": {
              "Name": "my_pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7076f245d336195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[3]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:route-table/rtb-0b2979f9597a1f086",
            "id": "rtb-0b2979f9597a1f086",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_pvt_route_table"
            },
            "tags_all": {
              "Name": "my_pvt_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7076f245d336195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[3]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pub_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e89d2d64a3bba83f",
            "route_table_id": "rtb-01f222110413d9115",
            "subnet_id": "subnet-080975e9b8676a0be"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.pub_route_table",
            "module.vpc1.aws_subnet.pub_sub",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[3]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca7cb5b924565b5e",
            "route_table_id": "rtb-0b2979f9597a1f086",
            "subnet_id": "subnet-0a47cb2a71a56a392"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.pvt_route_table",
            "module.vpc1.aws_subnet.pvt_sub",
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[3]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:subnet/subnet-080975e9b8676a0be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080975e9b8676a0be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub"
            },
            "tags_all": {
              "Name": "public_sub"
            },
            "vpc_id": "vpc-0e7076f245d336195"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[3]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:subnet/subnet-0a47cb2a71a56a392",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a47cb2a71a56a392",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub"
            },
            "tags_all": {
              "Name": "private_sub"
            },
            "vpc_id": "vpc-0e7076f245d336195"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1[3]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sydney",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:193243541846:vpc/vpc-0e7076f245d336195",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0faac929c3740284f",
            "default_route_table_id": "rtb-0b159c1d462c988f7",
            "default_security_group_id": "sg-0de2e12d79c6afba7",
            "dhcp_options_id": "dopt-0766aa9532903afab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e7076f245d336195",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b159c1d462c988f7",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:internet-gateway/igw-0c9dece825146bba8",
            "id": "igw-0c9dece825146bba8",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_igp"
            },
            "tags_all": {
              "Name": "my_igp"
            },
            "vpc_id": "vpc-09e3a998341fdacea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "igp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c9dece825146bba8",
            "id": "r-rtb-0d116745ab6688f741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d116745ab6688f74",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igp",
            "module.vpc.aws_route_table.pub_route_table",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:route-table/rtb-0d116745ab6688f74",
            "id": "rtb-0d116745ab6688f74",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9dece825146bba8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_pub_route_table"
            },
            "tags_all": {
              "Name": "my_pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e3a998341fdacea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:route-table/rtb-089603661d0f9eb59",
            "id": "rtb-089603661d0f9eb59",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_pvt_route_table"
            },
            "tags_all": {
              "Name": "my_pvt_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e3a998341fdacea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pub_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eca84f68e9f10ee8",
            "route_table_id": "rtb-0d116745ab6688f74",
            "subnet_id": "subnet-036826abe52a1ef35"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pub_route_table",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043b80505a402981d",
            "route_table_id": "rtb-089603661d0f9eb59",
            "subnet_id": "subnet-090616a4ae7f87374"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pvt_route_table",
            "module.vpc.aws_subnet.pvt_sub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:subnet/subnet-036826abe52a1ef35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036826abe52a1ef35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub"
            },
            "tags_all": {
              "Name": "public_sub"
            },
            "vpc_id": "vpc-09e3a998341fdacea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:subnet/subnet-090616a4ae7f87374",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090616a4ae7f87374",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub"
            },
            "tags_all": {
              "Name": "private_sub"
            },
            "vpc_id": "vpc-09e3a998341fdacea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:vpc/vpc-09e3a998341fdacea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0e2defd5537026131",
            "default_route_table_id": "rtb-0b19b35fd4fe33298",
            "default_security_group_id": "sg-0ac5622011d81e885",
            "dhcp_options_id": "dopt-09484414f1f5c0bbe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09e3a998341fdacea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b19b35fd4fe33298",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:internet-gateway/igw-0aef417c050f0ac5a",
            "id": "igw-0aef417c050f0ac5a",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_igp"
            },
            "tags_all": {
              "Name": "my_igp"
            },
            "vpc_id": "vpc-0ee5ab6c3c2cece25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "igp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aef417c050f0ac5a",
            "id": "r-rtb-0a27036d498af94231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a27036d498af9423",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igp",
            "module.vpc.aws_route_table.pub_route_table",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:route-table/rtb-0a27036d498af9423",
            "id": "rtb-0a27036d498af9423",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aef417c050f0ac5a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_pub_route_table"
            },
            "tags_all": {
              "Name": "my_pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee5ab6c3c2cece25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:route-table/rtb-05eeea12afe21e4eb",
            "id": "rtb-05eeea12afe21e4eb",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_pvt_route_table"
            },
            "tags_all": {
              "Name": "my_pvt_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee5ab6c3c2cece25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pub_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3c96b52c8c07f66",
            "route_table_id": "rtb-0a27036d498af9423",
            "subnet_id": "subnet-0ab969950b64e9a98"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pub_route_table",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0689515aebebc7ab0",
            "route_table_id": "rtb-05eeea12afe21e4eb",
            "subnet_id": "subnet-0b14f188eb77bffa5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pvt_route_table",
            "module.vpc.aws_subnet.pvt_sub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:subnet/subnet-0ab969950b64e9a98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab969950b64e9a98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub"
            },
            "tags_all": {
              "Name": "public_sub"
            },
            "vpc_id": "vpc-0ee5ab6c3c2cece25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:subnet/subnet-0b14f188eb77bffa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b14f188eb77bffa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub"
            },
            "tags_all": {
              "Name": "private_sub"
            },
            "vpc_id": "vpc-0ee5ab6c3c2cece25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:vpc/vpc-0ee5ab6c3c2cece25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0bd57184e6e35067f",
            "default_route_table_id": "rtb-0297e8edc55f363c7",
            "default_security_group_id": "sg-0510e9b79377595a6",
            "dhcp_options_id": "dopt-09484414f1f5c0bbe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ee5ab6c3c2cece25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0297e8edc55f363c7",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc[2]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:internet-gateway/igw-058cc59ba13d43e9b",
            "id": "igw-058cc59ba13d43e9b",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_igp"
            },
            "tags_all": {
              "Name": "my_igp"
            },
            "vpc_id": "vpc-04433205eaf37157a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[2]",
      "mode": "managed",
      "type": "aws_route",
      "name": "igp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-058cc59ba13d43e9b",
            "id": "r-rtb-08b973c63aa7481d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b973c63aa7481d3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igp",
            "module.vpc.aws_route_table.pub_route_table",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[2]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:route-table/rtb-08b973c63aa7481d3",
            "id": "rtb-08b973c63aa7481d3",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058cc59ba13d43e9b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_pub_route_table"
            },
            "tags_all": {
              "Name": "my_pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04433205eaf37157a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[2]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:route-table/rtb-094533b3284dda693",
            "id": "rtb-094533b3284dda693",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_pvt_route_table"
            },
            "tags_all": {
              "Name": "my_pvt_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04433205eaf37157a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[2]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pub_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d6d7f32b3c399fa",
            "route_table_id": "rtb-08b973c63aa7481d3",
            "subnet_id": "subnet-058e6c72a93aa261e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pub_route_table",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[2]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b8578f2c0526f3f",
            "route_table_id": "rtb-094533b3284dda693",
            "subnet_id": "subnet-0f5fa9e064b408286"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pvt_route_table",
            "module.vpc.aws_subnet.pvt_sub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:subnet/subnet-058e6c72a93aa261e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058e6c72a93aa261e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub"
            },
            "tags_all": {
              "Name": "public_sub"
            },
            "vpc_id": "vpc-04433205eaf37157a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:subnet/subnet-0f5fa9e064b408286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5fa9e064b408286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub"
            },
            "tags_all": {
              "Name": "private_sub"
            },
            "vpc_id": "vpc-04433205eaf37157a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[2]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:vpc/vpc-04433205eaf37157a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0868a9691321d3d91",
            "default_route_table_id": "rtb-030db79908e758401",
            "default_security_group_id": "sg-0eb9f4cfcfed5d5db",
            "dhcp_options_id": "dopt-09484414f1f5c0bbe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04433205eaf37157a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030db79908e758401",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc[3]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:internet-gateway/igw-0aaee96cc896568d8",
            "id": "igw-0aaee96cc896568d8",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_igp"
            },
            "tags_all": {
              "Name": "my_igp"
            },
            "vpc_id": "vpc-0e99112f3cd8943ed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[3]",
      "mode": "managed",
      "type": "aws_route",
      "name": "igp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aaee96cc896568d8",
            "id": "r-rtb-0c4db246764ab25ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c4db246764ab25ef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igp",
            "module.vpc.aws_route_table.pub_route_table",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[3]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:route-table/rtb-0c4db246764ab25ef",
            "id": "rtb-0c4db246764ab25ef",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aaee96cc896568d8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_pub_route_table"
            },
            "tags_all": {
              "Name": "my_pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e99112f3cd8943ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[3]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:route-table/rtb-0cbee7f055d2fca2c",
            "id": "rtb-0cbee7f055d2fca2c",
            "owner_id": "193243541846",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_pvt_route_table"
            },
            "tags_all": {
              "Name": "my_pvt_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e99112f3cd8943ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[3]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pub_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef60d687ef4e9f80",
            "route_table_id": "rtb-0c4db246764ab25ef",
            "subnet_id": "subnet-096b7825960798707"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pub_route_table",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[3]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b8ed47a0bbb9f62",
            "route_table_id": "rtb-0cbee7f055d2fca2c",
            "subnet_id": "subnet-03c5c6979f5f5aaae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pvt_route_table",
            "module.vpc.aws_subnet.pvt_sub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[3]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:subnet/subnet-096b7825960798707",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096b7825960798707",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub"
            },
            "tags_all": {
              "Name": "public_sub"
            },
            "vpc_id": "vpc-0e99112f3cd8943ed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[3]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:subnet/subnet-03c5c6979f5f5aaae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c5c6979f5f5aaae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193243541846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub"
            },
            "tags_all": {
              "Name": "private_sub"
            },
            "vpc_id": "vpc-0e99112f3cd8943ed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[3]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193243541846:vpc/vpc-0e99112f3cd8943ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-011b2fbd9186fc6a5",
            "default_route_table_id": "rtb-0adc7f9619f9022ec",
            "default_security_group_id": "sg-04bb9ee62ec15e3f3",
            "dhcp_options_id": "dopt-09484414f1f5c0bbe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e99112f3cd8943ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0adc7f9619f9022ec",
            "owner_id": "193243541846",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}